# fslabscli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  docker-compose.yml  flake.nix  out.json  output.md  payload.json  release.yml  rust-toolchain.toml  updatecli-compose.yaml
.cargo/: config.toml
.github/: release-drafter.yaml
.github/workflows/: matrix.json  release-drafter.yml  release-publish.yml  release.yml  test.yml  tests.yml  update_pre_commit.yml
.prow/: publish.yaml
config/: registry.yaml
crates/fsl_test_api/: Cargo.toml
crates/fsl_test_api/src/: lib.rs
job_outputs/: hub_geostats-rust-installer-publish.json  lens-rust-installer-publish.json  oreprohub-rust-installer-publish.json  whirlpool-rust-installer-publish.json
release_notes/: release-2.0.md
src/: cli_args.rs  command_ext.rs  crate_graph.rs  main.rs  script.rs  test_args.rs  utils.rs
src/commands/: mod.rs  publishable.rs
src/commands/autofix/: mod.rs
src/commands/check_workspace/: binary.rs  cargo.rs  docker.rs  mod.rs  nix_binary.rs  npm.rs  s3.rs
src/commands/dependencies/: mod.rs
src/commands/docker_build_push/: mod.rs
src/commands/download_artifacts/: mod.rs
src/commands/fix_lock_files/: mod.rs
src/commands/generate_wix/: mod.rs
src/commands/generate_workflow/: mod.rs  publish_workflow.rs  test_workflow.rs
src/commands/generate_workflow/workflows/: mod.rs  publish_docker.rs  publish_npm_napi.rs  publish_rust_binary.rs  publish_rust_installer.rs  publish_rust_registry.rs  report_release.rs
src/commands/github_app_token/: mod.rs
src/commands/publish/: mod.rs  storage_tests.rs
src/commands/publishable/: cargo.rs  docker.rs  mod.rs  npm.rs
src/commands/rust_tests/: mod.rs
src/commands/summaries/: mod.rs
src/commands/summaries/run_types/: checks.rs  mod.rs  publishing.rs
src/commands/summaries/template/: mod.rs
src/commands/tests/: docker_service.rs  mod.rs
src/utils/: auto_update.rs  cargo.rs  docker.rs  github.rs  mod.rs  test.rs
summaries_data/: ci_bis_tests-check.json  ci_bis_tests-miri.json  ci_bis_tests-test.json  ci_tests-check.json  ci_tests-miri.json  ci_tests-test.json  output.md
test_crates/wasm_example/: Cargo.toml  tests.rs
test_data/: create_repo.sh
test_data/rev1_content/baz/: Cargo.toml
test_data/rev1_content/baz/baz_member1/: Cargo.toml
test_data/rev1_content/foo/: Cargo.toml
updatecli/values.d/: githubactions.yaml  scm.yaml
