[package]
authors = ["FSLABS DevOps Gods"]
description = "Command line interface for helping FSLABS ci"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "cargo-fslabscli"
# publish = ["fsl"]
repository = "https://github.com/ForesightMiningSoftwareCorporation/fslabsci"
version = "2.29.4"

[package.metadata]

[package.metadata.fslabs]

[package.metadata.fslabs.test.args]
service_azurite = true
service_minio = true
[package.metadata.fslabs.publish]

[package.metadata.fslabs.publish.binary]
name = "FSLABS Cli tool"
publish = true
sign = false
targets = ["x86_64-unknown-linux-gnu"]
[package.metadata.fslabs.publish.nix_binary]
publish = true


[features]
alpha = []
beta = []
nightly = []
prod = []

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
cargo_metadata = "0.22.0"
chrono = "0.4.42"
console = "0.16.1"
convert_case = "0.8.0"
dunce = "1.0.5"
exitcode = "1.1.2"
futures-util = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
ignore = "0.4.23"
indicatif = "0.18.0"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
junit-report = "0.8.3"
num = "0.4.3"
octocrab = "0.45.0"
opentelemetry-appender-tracing = { version = "0.30.1" }
opentelemetry_sdk = { version = "0.30.0", features = ["logs"] }
opentelemetry-otlp = { version = "0.30.0", features = ["logs", "grpc-tonic"] }
opentelemetry = { version = "0.30.0" }
port_check = "0.3.0"
rand = "0.9.2"
rust-toolchain-file = "0.1.1"
serde_json = "1.0.145"
serde_yml = "0.0.12"
strum_macros = "0.27.2"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = [
    "std",
    "env-filter",
    "fmt",
] }
url = "2.5.7"
void = "1.0.2"
zip = "5.1.1"
tracing-core = "0.1.34"
futures = "0.3.31"
toml = "0.9.5"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
regex = "1.11.2"
toml_edit = "0.23.4"
walkdir = "2.5.0"
self_update = { version = "0.42.0", default-features = false, features = [
    "rustls",
] }
tempfile = "3.22.0"
cargo-util = "0.2.22"
diffy = "0.4.2"
strum = "0.27.2"
mime_guess = "2.0.5"

[dependencies.anyhow]
features = []
version = "1.0.99"

[dependencies.clap]
features = ["derive", "env"]
version = "4.5.47"

[dependencies.git2]
default-features = false
version = "0.20.2"

[dependencies.humanize-duration]
features = ["chrono"]
version = "0.0.7"

[dependencies.hyper]
default-features = false
version = "1.7.0"

[dependencies.hyper-rustls]
version = "0.27.7"
default-features = false

[dependencies.hyper-util]
default-features = false
features = ["tokio", "client-legacy"]
version = "0.1.16"

[dependencies.indexmap]
features = ["serde"]
version = "2.11.1"

[dependencies.opendal]
features = ["services-s3", "services-azblob"]
version = "0.51"

[dependencies.oci-distribution]
default-features = false
features = ["rustls-tls"]
version = "0.11.0"

[dependencies.quick-xml]
features = ["serialize"]
version = "0.38.3"

[dependencies.rustls]
default-features = false
features = ["tls12"]
version = "0.23.31"

[dependencies.serde]
features = ["derive", "std"]
version = "1.0.223"

[dependencies.serde_with]
features = ["macros"]
version = "3.14.0"

[dependencies.tokio]
features = ["full"]
version = "1.47.1"

[dev-dependencies]
assert_fs = "1.1.3"
dotenvy = "0.15"
indoc = "2.0.6"
reqwest = "0.12"
serial_test = "3.2.0"
testcontainers = "0.25.0"
wiremock = "0.6.5"
