[package]
authors = ["FSLABS DevOps Gods"]
description = "Command line interface for helping FSLABS ci"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "cargo-fslabscli"
publish = ["foresight_mining_software_corporation"]
repository = "https://github.com/ForesightMiningSoftwareCorporation/fslabsci"
version = "2.34.1"

[package.metadata.fslabs.publish.binary]
name = "FSLABS Cli tool"
publish = false
sign = false
targets = ["x86_64-unknown-linux-gnu"]
[package.metadata.fslabs.publish.nix_binary]
publish = true
[package.metadata.fslabs.publish.cargo]
publish = true

[workspace]
resolver = "2"
members = [
    "crates/fsl_test_api",
]

[features]
alpha = []
beta = []
nightly = []
prod = []

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
cargo_metadata = "0.23.1"
chrono = "0.4.42"
console = "0.16.2"
convert_case = "0.10.0"
dunce = "1.0.5"
exitcode = "1.1.2"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
ignore = "0.4.25"
indicatif = "0.18.3"
itertools = "0.14.0"
jsonwebtoken = {version = "10.2.0"}
junit-report = "0.8.3"
num = "0.4.3"
octocrab = "0.49.4"
opentelemetry-appender-tracing = { version = "0.31.1" }
opentelemetry_sdk = { version = "0.31.0", features = ["logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["logs", "grpc-tonic", "reqwest-rustls"] }
opentelemetry = { version = "0.31.0" }
port_check = "0.3.0"
rand = "0.9.2"
rust-toolchain-file = "0.1.1"
serde_json = "1.0.147"
serde_yml = "0.0.12"
strum_macros = "0.27.2"
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = [
    "std",
    "env-filter",
    "fmt",
] }
url = "2.5.7"
void = "1.0.2"
zip = "7.0.0"
tracing-core = "0.1.36"
futures = "0.3.31"
toml = "0.9.10+spec-1.1.0"
clap_complete = "4.5.62"
clap_mangen = "0.2.31"
regex = "1.12.2"
toml_edit = "0.24.0+spec-1.1.0"
walkdir = "2.5.0"
self_update = { version = "0.42.0", default-features = false, features = [
   "rustls",
] }
tempfile = "3.24.0"
cargo-util = "0.2.25"
diffy = "0.4.2"
strum = "0.27.2"
mime_guess = "2.0.5"
temp-dir = "0.1.16"
aws-config = { version = "1.8.12", default-features = false, features = ["behavior-version-latest", "rt-tokio", "sso", "credentials-process"] }
aws-sdk-cloudfront = { version = "1.106.0", default-features = false, features = ["rt-tokio"] }

[dependencies.anyhow]
features = []
version = "1.0.100"

[dependencies.clap]
features = ["derive", "env"]
version = "4.5.53"

[dependencies.git2]
default-features = false
version = "0.20.3"
features = ["vendored-openssl", "https", "ssh"]

[dependencies.humanize-duration]
features = ["chrono"]
version = "0.0.7"

[dependencies.hyper]
default-features = false
version = "1.8.1"

[dependencies.hyper-rustls]
version = "0.27.7"
default-features = false

[dependencies.hyper-util]
default-features = false
features = ["tokio", "client-legacy"]
version = "0.1.19"

[dependencies.indexmap]
features = ["serde"]
version = "2.12.1"

[dependencies.opendal]
features = ["services-s3", "services-azblob"]
version = "0.55.0"

[dependencies.oci-distribution]
default-features = false
features = ["rustls-tls"]
version = "0.11.0"

[dependencies.quick-xml]
features = ["serialize"]
version = "0.38.4"

[dependencies.rustls]
default-features = false
features = ["tls12", "ring"]
version = "0.23.35"

[dependencies.serde]
features = ["derive", "std"]
version = "1.0.228"

[dependencies.serde_with]
features = ["macros"]
version = "3.16.1"

[dependencies.tokio]
features = ["full"]
version = "1.48.0"

[dev-dependencies]
assert_fs = "1.1.3"
dotenvy = "0.15.7"
indoc = "2.0.7"
mockall = "0.14.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
testcontainers = {  version = "0.26.3", features = ["blocking"]}
wiremock = "0.6.5"
