[package]
name = "fsl_test_api"
version = "2.30.0"
description = "API for use within tests that depend on the fslabscli test runner"
authors = ["FSLABS DevOps Gods"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = ["foresight_mining_software_corporation"]
repository = "https://github.com/ForesightMiningSoftwareCorporation/fslabsci"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
envconfig = "0.11"
url = "2"
