[package]
name = "fsl_test_api"
version = "2.33.1"
description = "API for use within tests that depend on the fslabscli test runner"
authors = ["FSLABS DevOps Gods"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = ["foresight-mining-software-corporation"]
repository = "https://github.com/ForesightMiningSoftwareCorporation/fslabsci"

[dependencies]
envconfig = "0.11.1"
url = "2.5.8"

[package.metadata.fslabs.publish.cargo]
publish = true
alternate_registries = ["fslabs-nominal"]
